<resources>
    <string name="app_name">Proj_zesp</string>
    <string name="Log_text1">Don`t have an account ?</string>
    <string name="Log_but_sign_in">Sign in</string>
    <string name="Log_but_sign_up"><u>Sign up</u></string>
    <string name="privacy_tex">Privacy and policy</string>
    <string name="email"><b>E-mail</b></string>
    <string name="password"><b>Password</b></string>
    <string name="rep_password"><b>Repeat password</b></string>
    <string name="first_name"><b>First name</b></string>
    <string name="second_name"><b>Last name</b></string>
    <string name="error">- error -</string>
    <string name="loading">Loading...</string>
    <string name="Services">Services</string>
    <string name="view_profile_text">View Profile</string>
    <string name="Car_Wash_booking">Car Wash Booking</string>
    <string name="our_location">Our Location</string>
    <string name="prices">Prices</string>
    <string name="birthday"><b>Date of Birthday</b></string>
    <string name="points"><b>Points of loyalty</b></string>
    <string name="check_availability">Check availability</string>
    <string name="choose_date"><b>Choose date:</b></string>
    <string name="choose_hour"><b>Choose hour:</b></string>
    <string name="change">Change</string>
    <string name="choose_station"><b>Choose station:</b></string>
    <string name="title_activity_maps">Map</string>
    <string name="logout_btn">Logout</string>

    <string name="paliwo1">LPG</string>
    <string name="paliwo1_cena">Paliwo1_Cena</string>

    <string name="paliwo2">ON</string>
    <string name="paliwo2_cena">Paliwo2_Cena</string>

    <string name="paliwo3">PB95</string>
    <string name="paliwo3_cena">Paliwo3_Cena</string>

    <string name="paliwo4">PB98</string>
    <string name="paliwo4_cena">Paliwo4_Cena</string>
    <string name="hint_for_pass2">New password(optional)</string>
    <string name="edit_prof_btn">Edit profile</string>
    <string name="Change">Change</string>
</resources>