<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PricesActivity"
    android:fillViewport="true"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient" >


        <ImageView
            android:id="@+id/calendar_logo"
            android:layout_width="44dp"
            android:layout_height="46dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/Car_Wash_booking"
            android:scaleX="2"
            android:scaleY="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/prices_logo" />

        <TextView
            android:id="@+id/p_view_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/prices"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar_logo" />


        <TextView
            android:id="@+id/paliwo1_cena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/acme"
            android:text="@string/loading"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paliwo1"
            app:layout_constraintTop_toBottomOf="@+id/p_view_profile_text" />

        <TextView
            android:id="@+id/paliwo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/acme"
            android:text="@string/paliwo1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/p_view_profile_text" />

        <TextView
            android:id="@+id/paliwo2_cena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/acme"
            android:text="@string/loading"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paliwo2"
            app:layout_constraintTop_toBottomOf="@+id/paliwo1_cena" />

        <TextView
            android:id="@+id/paliwo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/acme"
            android:text="@string/paliwo2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paliwo1" />

        <TextView
            android:id="@+id/paliwo3_cena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/acme"
            android:text="@string/loading"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paliwo3"
            app:layout_constraintTop_toBottomOf="@+id/paliwo2_cena" />

        <TextView
            android:id="@+id/paliwo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/acme"
            android:text="@string/paliwo3"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paliwo2" />

        <TextView
            android:id="@+id/paliwo4_cena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="175dp"
            android:fontFamily="@font/acme"
            android:text="@string/loading"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/paliwo4"
            app:layout_constraintTop_toBottomOf="@+id/paliwo3_cena" />

        <TextView
            android:id="@+id/paliwo4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="175dp"
            android:fontFamily="@font/acme"
            android:text="@string/paliwo4"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paliwo3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>