<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUpScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">



        <!-- password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="321dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="#1a000000"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <!-- password2 -->
        <EditText
            android:id="@+id/password2"
            android:layout_width="321dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="#26000000"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/rep_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <!-- first name -->
        <EditText
            android:id="@+id/first_name"
            android:layout_width="321dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="#33000000"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/first_name"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password2" />

        <!-- last name -->
        <EditText
            android:id="@+id/last_name"
            android:layout_width="321dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:background="#40000000"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:hint="@string/second_name"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <!-- logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="486dp"
            android:layout_height="274dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/pb_logo"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--    &lt;!&ndash;        app:srcCompat="@drawable/pb_logo_xml"/>&ndash;&gt;    does not work-->


        <!-- Email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="321dp"
            android:layout_height="47dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="#0d000000"
            android:fontFamily="@font/acme"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />


        <!-- Login button -->


        <!-- Register button -->
        <Button
            android:id="@+id/register_bu"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/acme"
            android:text="@string/Log_but_sign_up"
            app:layout_constraintBottom_toTopOf="@+id/privacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <!--    Text: "Dont have an account"-->

        <!--    Mail icon-->
        <ImageView
            android:id="@+id/mail_icon_p"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/mail_icon"
            android:scaleX="0.65"
            android:scaleY="0.65"
            android:src="@drawable/mail_icon"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintTop_toTopOf="@+id/email"
            app:srcCompat="@drawable/mail_icon"
            tools:srcCompat="@drawable/mail_icon" />

        <!--    Lock icon-->
        <ImageView
            android:id="@+id/lock_icon_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleX="0.65"
            android:scaleY="0.65"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password"
            app:srcCompat="@drawable/lock_logo" />

        <!-- Privacy -->
        <TextView
            android:id="@+id/privacy"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/black"
            android:fontFamily="@font/acme"
            android:paddingTop="5dp"
            android:text="@string/privacy_tex"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/privacy_background" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>